updated security comment
