# controllers/photo_controller.go
@@ -17,6 +17,7 @@ import (
 // @Tags photo
 // @Accept json
 // @Produce json
+// @Security AuthToken
 // @Success 200 {object} models.Photo
 // @Router /photos [get]
 func GetAllPhoto(c *gin.Context) {
@@ -43,6 +44,7 @@ func GetAllPhoto(c *gin.Context) {
 // @Tags photo
 // @Accept json
 // @Produce json
+// @Security AuthToken
 // @Param photoId path int true "ID of the photo"
 // @Success 200 {object} models.Photo
 // @Router /photos/{photoId} [get]
@@ -86,6 +88,7 @@ func GetPhotoById(c *gin.Context) {
 // @Tags photo
 // @Accept json
 // @Produce json
+// @Security AuthToken
 // @Param models.Photo body models.Photo true "create photo"
 // @Success 200 {object} models.Photo
 // @Router /photos [post]
@@ -128,6 +131,7 @@ func CreatePhoto(c *gin.Context) {
 // @Tags photo
 // @Accept json
 // @Produce json
+// @Security AuthToken
 // @Param photoId path int true "ID of the photo to be updated"
 // @Success 200 {object} models.Photo
 // @Router /photos/{photoId} [patch]
@@ -167,6 +171,7 @@ func UpdatePhoto(c *gin.Context) {
 // @Tags photo
 // @Accept json
 // @Produce json
+// @Security AuthToken
 // @Param photoId path int true "ID of the photo to be deleted"
 // @Success 204 "No Content"
 // @Router /photos/{photoId} [delete]
